# barneydb

./: .gitignore  README.md  analyze_hashes.py  count_pdfs.py  list_notion_files.py  main.py  notion.py  pyproject.toml  requirements.txt  upload_born_digital_to_notion.py  upload_frozen_to_notion.py
