[project]
name = "candidate-a"
version = "0.1.0"
description = "Notion upload and transcript tooling (OCR, frozen docs, meeting transcripts)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "tqdm>=4.66.0",
    "python-dateutil>=2.9.0.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

